# FirmDTA

./: .gdb_history  README.md  block.c  blockdev.c  configure  disas.c  hmp-commands.hx  install_depends.sh  meson.build
accel/: meson.build
accel/shared/: fdta-basic-callback.c  fdta-callback.c  fdta-hashtable-wrapper.cpp  fdta-linux-procinfo.cpp  fdta-linux-vmi.cpp  fdta-main.c  fdta-output.c  fdta-taint-memory.c  fdta-taint-propagate-msg.c  fdta-taint-tcg.c  fdta-taint-tcg.c.bak  fdta-taintcheck-opt.c  fdta-target.c  fdta-tcg-taint-track.c  fdta-tcpip-parser.c  fdta-vmi-common.cpp  fdta-vmi-msg-wrapper.cpp  meson.build
accel/tcg/: cpu-exec.c  cputlb.c  translator.c
hw/acpi/: Kconfig
hw/net/: e1000.c
include/exec/: exec-all.h  helper-head.h  poison.h
include/qemu/: qht.h  typedefs.h
include/shared/: fdta-basic-callback.h  fdta-callback-common.h  fdta-callback-to-qemu.h  fdta-function-map.h  fdta-hashtable-wrapper.h  fdta-hookapi.h  fdta-linux-procinfo.h  fdta-linux-readelf.h  fdta-linux-vmi.h  fdta-main-internal.h  fdta-main.h  fdta-output.h  fdta-taint-memory-basic.h  fdta-taint-memory.h  fdta-taint-propagate-msg.h  fdta-taint-tcg.h  fdta-taint-tcg.h.bak  fdta-taintcheck-opt.h  fdta-target.h  fdta-tcpip-parser.h  fdta-types-common.h  fdta-vm-compress.h  fdta-vmi-callback.h  fdta-vmi-common.h  fdta-vmi-msg-warpper.h
include/sysemu/: blockdev.h
include/tcg/: decaf-types.h  hashtable-warpper.h  output.h  tcg.h  tcg.h.bak  test_tt.h
monitor/: misc.c
net/: tap.c
softmmu/: physmem.c  vl.c
tcg/: optimize.c  tcg.c  tcg.c.bak
util/: qht.c
(+931 files in other folders)
